src/test/deca/context/invalid/3.33-test-instanceof.deca
// Description:
//    Test 3.3 fail avec instanceof 
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    1 instanceof "hello world"; // TODO instanceof à faire avec les classes
}